<?xml version="1.0"?>
<package format="2">
  <name>e2es</name>

  <version>0.1.0</version>

  <license>Apache 2.0</license>

  <description>mav simulation on gazebo, the realsense plugin are based on "realsense_gazebo_plugin" package:
               https://github.com/pal-robotics/realsense_gazebo_plugin
  </description>

  <maintainer email="chensy1991@gmail.com">Shengyang Chen</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>

</package>
